BUGFIX Fixed broken CSS rules in TableListField
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/trunk@72675 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/TableListField.css
+++ b/css/TableListField.css
@@ -33,14 +33,13 @@ table.CMSList th {
 table.TableField thead th, 
 .TableListField table.data thead th, 
 table.CMSList thead th {
-	background-image : url(../../cms/images/tables/thead.png);
-	background-repeat : repeat-x;
-	background-position : left bottom;
-	background-color : #ebeadb;
-	height : 24px;
-	border-right : 1px solid #aca899;
-	border-left : 1px solid #ffffff;
-	padding-left : 0 5px;
+	background-image: url(../../cms/images/tables/thead.png);
+	background-repeat: repeat-x;
+	background-position: left bottom;
+	background-color: #ebeadb;
+	height: 24px;
+	border-right: 1px solid #aca899;
+	border-left: 1px solid #ffffff;
 }
 
 table.TableField thead th span, 
